fixed top margin spacing on index.hmtl

--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,7 @@ h1, h2, h3, h4, h5 {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
+    margin-top: 20px;
     border-bottom: 1px dashed black;
 }
 
